--- a/back.html
+++ b/back.html
@@ -1037,6 +1037,8 @@
                 introPlayer.dispose();
                 introPlayer = null;
             }
+            startMainPlaylist();
+
             if (!isGameWon) {
                 winStreak = 0; // Reset streak if the previous game wasn't won
             }
