--- a/back.html
+++ b/back.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Klondike Solitaire Deluxe</title>
+    <title>Smooth Moves Solitaire</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
     <style>
@@ -1565,7 +1565,7 @@
         }
 
         // --- Event Handlers ---
-        newGameBtn.addEventListener('click', () => { sounds.click.triggerAttackRelease("C2", "8n"); initializeNewGame(); });
+        newGameBtn.addEventListener('click', () => { sounds.click.triggerAttackRelease("C2", "8n"); promptNewGame(); });
         draw1Btn.addEventListener('click', () => {
             drawCount = 1;
             drawSelectModal.style.display = 'none';
