--- a/back.html
+++ b/back.html
@@ -439,7 +439,7 @@
 
     <div id="title-screen">
         <div class="title-cards"></div>
-        <h1>Klondike Solitaire</h1>
+        <h1>Smooth Moves</h1>
         <button id="start-game-btn">Start Game</button>
     </div>
 
