--- a/back.html
+++ b/back.html
@@ -439,7 +439,7 @@
 
     <div id="title-screen">
         <div class="title-cards"></div>
-        <h1>Smooth Moves</h1>
+        <h1>Smooth Moves Solitaire</h1>
         <button id="start-game-btn">Start Game</button>
     </div>
 
@@ -826,7 +826,7 @@
         let currentTrackIndex = -1;
         let shuffledPlaylist = [];
         let introPlayer;
-        let audioSetupPromise;
+        
         // --- Drag & Drop State ---
         // Manages the state related to dragging and dropping cards.
         let isDragging = false;
@@ -993,22 +993,22 @@
         }
 
         function initializeAudio() {
-            audioSetupPromise = Tone.start().then(() => {
-                setupSounds();
-                setupPhysics();
+            Tone.start().then(() => {
+                setupSounds();
+                setupPhysics();
 
-                if (!titleScreen.classList.contains('hidden')) {
-                    introPlayer = new Tone.Player("https://raw.githubusercontent.com/cdbyall/solitaire/main/music/00.mp3").toDestination();
-                    introPlayer.loop = true;
-                    //introPlayer.autostart = false;//
-                    updateMuteState(false);
-                }
-            });
-            document.removeEventListener('click', initializeAudio);
-            document.removeEventListener('touchstart', initializeAudio);
-        }
-        document.addEventListener('click', initializeAudio, { once: true });
-        document.addEventListener('touchend', initializeAudio, { once: true });
+                if (!titleScreen.classList.contains('hidden')) {
+                    introPlayer = new Tone.Player("https://raw.githubusercontent.com/cdbyall/solitaire/main/music/00.mp3").toDestination();
+                    introPlayer.loop = true;
+                    introPlayer.autostart = true;
+                    updateMuteState(false);
+                }
+            });
+            document.removeEventListener('click', initializeAudio);
+            document.removeEventListener('touchstart', initializeAudio);
+        }
+        document.addEventListener('click', initializeAudio, { once: true });
+        document.addEventListener('touchstart', initializeAudio, { once: true });
 
         startGameBtn.addEventListener('click', () => {
             if (sounds && sounds.click) sounds.click.triggerAttackRelease("C2", "8n");
@@ -1576,16 +1576,16 @@
             drawSelectModal.style.display = 'none';
             cardStyleModal.style.display = 'flex';
         });
-           normalStyleBtn.addEventListener('click', () => {
-            faceStyle = 'default';
-            cardStyleModal.style.display = 'none';
-            audioSetupPromise.then(initializeNewGame);
-        });
-        easySeeBtn.addEventListener('click', () => {
-            faceStyle = 'easy-see';
-            cardStyleModal.style.display = 'none';
-            audioSetupPromise.then(initializeNewGame);
-        });
+        normalStyleBtn.addEventListener('click', () => {
+            faceStyle = 'default';
+            cardStyleModal.style.display = 'none';
+            initializeNewGame();
+        });
+        easySeeBtn.addEventListener('click', () => {
+            faceStyle = 'easy-see';
+            cardStyleModal.style.display = 'none';
+            initializeNewGame();
+        });
 
         autocompleteBtn.addEventListener('click', runAutocomplete);
         hintBtn.addEventListener('click', () => { findHint(); });
