--- a/back.html
+++ b/back.html
@@ -638,7 +638,7 @@
     <div id="achievement-container"></div>
     <div id="fireworks-container"></div>
     <div id="mobile-win-overlay">
-        <div id="mobile-win-text">YOU WIN!</div>
+        <div id="mobile-win-text"></div>
     </div>
     <script>
     document.addEventListener('DOMContentLoaded', () => {
