--- a/back.html
+++ b/back.html
@@ -1124,7 +1124,7 @@
             tableau = Array.from({ length: 7 }, () => []);
             messageBox.textContent = '';
             autocompleteBtn.classList.add('hidden');
-            gameBoard.style.pointerEvents = 'auto';
+            //gameBoard.style.pointerEvents = 'auto';
             document.querySelectorAll('.win-animate, .hint-glow').forEach(el => el.classList.remove('win-animate', 'hint-glow'));
 
             // Create, shuffle, and deal the deck
